@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2022 Thomas Akehurst
+ * Copyright (C) 2016-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,7 +27,7 @@ public class SystemKeyAuthoriser {
 
   public SystemKeyAuthoriser(Set<String> patterns) {
     if (patterns == null || patterns.isEmpty()) {
-      patterns = ImmutableSet.of("wiremock.*");
+      patterns = Set.of("wiremock.*");
     }
 
     ImmutableSet.Builder<Pattern> builder = ImmutableSet.builder();
